server-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-server-virtualservice
spec:
  hosts:
    - app-server-service
  http:
    - route:
        - destination:
            host: app-server-service
            port:
              number: 3000
          headers:
            request:
              add:
                gka: test
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 'gateway-error,connect-failure,refused-stream'
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-server-destinationrule
spec:
  host: app-server-service
  trafficPolicy:
    tls: 
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: ROUND_ROBIN
      # simple: PASSTHROUGH
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 100
